src/assets/_scss/components/_project_grid.scss
.project-grid {
  .project-item {
    cursor: pointer;
    position: relative;
    display: block;
    &:hover {
      .hover-overlay {
        @include animation(expand, 0.5s);
        .hover-primary-text {
          @include animation(slideLeft, 0.5s, 0.5s);
        }
        .hover-secondary-text {
          @include animation(slideLeft, 0.5s, 0.8s);
        }
      }
    }
  }
  @include media-breakpoint-down(md) {
    .bg-image {
      &.aspect-2x1,
      &.aspect-1x1 {
        padding-top: 55%;
      }
    }
  }
}

